@@ -45,6 +45,7 @@ if __name__ == "__main__":
                 "flask",
                 "flask-sqlalchemy",
                 "flask-login",
+                "sqlalchemy",
                 "cheroot",
                 "werkzeug",
                 "sentry-sdk[flask]",
