@@ -4,6 +4,7 @@ V 0.12.0:
   - Fixed sentry logging behaviour for flask
   - Adjusted parameters provided to registration and password forgot emails
   - Now fails gracefully if database connection can't be established
+  - Improved logging configuration for flask
 V 0.11.0:
   - Log traceback in errors in flask framework
 V 0.10.2:
